added getting timing request parameters by current date

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,11 +7,16 @@ add_subdirectory(sleepy-discord)
 include_directories("rapidjson/include")
 include_directories("date/include/date")
 add_executable(DDOSFizru
-	example0.cpp
-)
+	example0.cpp)
+
+ADD_EXECUTABLE(timeCheck timeChecking.cpp)
+
 
 target_link_libraries(DDOSFizru
 	sleepy-discord 
 )
 
 
+target_link_libraries(timeCheck
+	sleepy-discord 
+)
